// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable links if no analysis has been done 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "id": "foo",
            },
          }
        }
      >
        overview.page
      </Link>
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={false}
        label="issues.page"
        to={
          Object {
            "pathname": "/project/issues",
            "query": Object {
              "id": "foo",
              "resolved": "false",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={false}
        label="layout.security_hotspots"
        to={
          Object {
            "pathname": "/security_hotspots",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={false}
        label="layout.measures"
        to={
          Object {
            "pathname": "/component_measures",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={false}
        label="code.page"
        to={
          Object {
            "pathname": "/code",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={false}
        label="project_activity.page"
        to={
          Object {
            "pathname": "/project/activity",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        project.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should render correctly for security extensions 1`] = `
<Dropdown
  data-test="extensions"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-bar",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          ComponentBar
        </Link>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should render correctly for security extensions 2`] = `null`;

exports[`should work for a branch 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      >
        overview.page
      </Link>
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="issues.page"
        to={
          Object {
            "pathname": "/project/issues",
            "query": Object {
              "branch": "release",
              "id": "foo",
              "resolved": "false",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.security_hotspots"
        to={
          Object {
            "pathname": "/security_hotspots",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.measures"
        to={
          Object {
            "pathname": "/component_measures",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="code.page"
        to={
          Object {
            "pathname": "/code",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="project_activity.page"
        to={
          Object {
            "pathname": "/project/activity",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      />
    </li>
    <Dropdown
      data-test="extensions"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/extension/component-foo",
                  "query": Object {
                    "branch": "release",
                    "id": "foo",
                    "qualifier": "TRK",
                  },
                }
              }
            >
              ComponentFoo
            </Link>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/settings",
                  "query": Object {
                    "branch": "release",
                    "id": "foo",
                  },
                }
              }
            >
              project_settings.page
            </Link>
          </li>
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/branches",
                  "query": Object {
                    "branch": "release",
                    "id": "foo",
                  },
                }
              }
            >
              project_branch_pull_request.page
            </Link>
          </li>
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/baseline",
                  "query": Object {
                    "branch": "release",
                    "id": "foo",
                  },
                }
              }
            >
              project_baseline.page
            </Link>
          </li>
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/webhooks",
                  "query": Object {
                    "branch": "release",
                    "id": "foo",
                  },
                }
              }
            >
              webhooks.page
            </Link>
          </li>
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/deletion",
                  "query": Object {
                    "branch": "release",
                    "id": "foo",
                  },
                }
              }
            >
              deletion.page
            </Link>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        project.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should work for a branch 2`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      >
        overview.page
      </Link>
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="issues.page"
        to={
          Object {
            "pathname": "/project/issues",
            "query": Object {
              "branch": "release",
              "id": "foo",
              "resolved": "false",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.security_hotspots"
        to={
          Object {
            "pathname": "/security_hotspots",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.measures"
        to={
          Object {
            "pathname": "/component_measures",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="code.page"
        to={
          Object {
            "pathname": "/code",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="project_activity.page"
        to={
          Object {
            "pathname": "/project/activity",
            "query": Object {
              "branch": "release",
              "id": "foo",
            },
          }
        }
      />
    </li>
    <Dropdown
      data-test="extensions"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/extension/component-foo",
                  "query": Object {
                    "branch": "release",
                    "id": "foo",
                    "qualifier": "TRK",
                  },
                }
              }
            >
              ComponentFoo
            </Link>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
  <NavBarTabs>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        project.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should work for all qualifiers 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "id": "foo",
            },
          }
        }
      >
        overview.page
      </Link>
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="issues.page"
        to={
          Object {
            "pathname": "/project/issues",
            "query": Object {
              "id": "foo",
              "resolved": "false",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.security_hotspots"
        to={
          Object {
            "pathname": "/security_hotspots",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.measures"
        to={
          Object {
            "pathname": "/component_measures",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="code.page"
        to={
          Object {
            "pathname": "/code",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="project_activity.page"
        to={
          Object {
            "pathname": "/project/activity",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/settings",
                  "query": Object {
                    "id": "foo",
                  },
                }
              }
            >
              project_settings.page
            </Link>
          </li>
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/branches",
                  "query": Object {
                    "id": "foo",
                  },
                }
              }
            >
              project_branch_pull_request.page
            </Link>
          </li>
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/baseline",
                  "query": Object {
                    "id": "foo",
                  },
                }
              }
            >
              project_baseline.page
            </Link>
          </li>
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/webhooks",
                  "query": Object {
                    "id": "foo",
                  },
                }
              }
            >
              webhooks.page
            </Link>
          </li>
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/deletion",
                  "query": Object {
                    "id": "foo",
                  },
                }
              }
            >
              deletion.page
            </Link>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        project.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should work for all qualifiers 2`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/portfolio",
            "query": Object {
              "id": "foo",
            },
          }
        }
      >
        overview.page
      </Link>
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="issues.page"
        to={
          Object {
            "pathname": "/project/issues",
            "query": Object {
              "id": "foo",
              "resolved": "false",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.measures"
        to={
          Object {
            "pathname": "/component_measures",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="view_projects.page"
        to={
          Object {
            "pathname": "/code",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="project_activity.page"
        to={
          Object {
            "pathname": "/project/activity",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/deletion",
                  "query": Object {
                    "id": "foo",
                  },
                }
              }
            >
              deletion.page
            </Link>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
</div>
`;

exports[`should work for all qualifiers 3`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/portfolio",
            "query": Object {
              "id": "foo",
            },
          }
        }
      >
        overview.page
      </Link>
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="issues.page"
        to={
          Object {
            "pathname": "/project/issues",
            "query": Object {
              "id": "foo",
              "resolved": "false",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.measures"
        to={
          Object {
            "pathname": "/component_measures",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="view_projects.page"
        to={
          Object {
            "pathname": "/code",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="project_activity.page"
        to={
          Object {
            "pathname": "/project/activity",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
  </NavBarTabs>
  <NavBarTabs />
</div>
`;

exports[`should work for all qualifiers 4`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "id": "foo",
            },
          }
        }
      >
        overview.page
      </Link>
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="issues.page"
        to={
          Object {
            "pathname": "/project/issues",
            "query": Object {
              "id": "foo",
              "resolved": "false",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.security_hotspots"
        to={
          Object {
            "pathname": "/security_hotspots",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.measures"
        to={
          Object {
            "pathname": "/component_measures",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="view_projects.page"
        to={
          Object {
            "pathname": "/code",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="project_activity.page"
        to={
          Object {
            "pathname": "/project/activity",
            "query": Object {
              "id": "foo",
            },
          }
        }
      />
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/application/console",
                  "query": Object {
                    "id": "foo",
                  },
                }
              }
            >
              application_console.page
            </Link>
          </li>
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/deletion",
                  "query": Object {
                    "id": "foo",
                  },
                }
              }
            >
              deletion.page
            </Link>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        application.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should work for pull requests 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
            },
          }
        }
      >
        overview.page
      </Link>
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="issues.page"
        to={
          Object {
            "pathname": "/project/issues",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
              "resolved": "false",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.security_hotspots"
        to={
          Object {
            "pathname": "/security_hotspots",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.measures"
        to={
          Object {
            "pathname": "/component_measures",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="code.page"
        to={
          Object {
            "pathname": "/code",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
            },
          }
        }
      />
    </li>
    <Dropdown
      data-test="extensions"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/extension/component-foo",
                  "query": Object {
                    "id": "foo",
                    "pullRequest": "1001",
                    "qualifier": "TRK",
                  },
                }
              }
            >
              ComponentFoo
            </Link>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
  <NavBarTabs />
</div>
`;

exports[`should work for pull requests 2`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
            },
          }
        }
      >
        overview.page
      </Link>
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="issues.page"
        to={
          Object {
            "pathname": "/project/issues",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
              "resolved": "false",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.security_hotspots"
        to={
          Object {
            "pathname": "/security_hotspots",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="layout.measures"
        to={
          Object {
            "pathname": "/component_measures",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
            },
          }
        }
      />
    </li>
    <li>
      <MenuLink
        activeClassName="active"
        hasAnalysis={true}
        label="code.page"
        to={
          Object {
            "pathname": "/code",
            "query": Object {
              "id": "foo",
              "pullRequest": "1001",
            },
          }
        }
      />
    </li>
    <Dropdown
      data-test="extensions"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <Link
              activeClassName="active"
              onlyActiveOnIndex={false}
              style={Object {}}
              to={
                Object {
                  "pathname": "/project/extension/component-foo",
                  "query": Object {
                    "id": "foo",
                    "pullRequest": "1001",
                    "qualifier": "TRK",
                  },
                }
              }
            >
              ComponentFoo
            </Link>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
  <NavBarTabs />
</div>
`;

exports[`should work with extensions 1`] = `
<Dropdown
  data-test="extensions"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-foo",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          ComponentFoo
        </Link>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should work with extensions 2`] = `
<Dropdown
  data-test="administration"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/settings",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_settings.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/branches",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_branch_pull_request.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/baseline",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_baseline.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/admin/extension/foo",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          Foo
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/webhooks",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          webhooks.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/deletion",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          deletion.page
        </Link>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should work with multiple extensions 1`] = `
<Dropdown
  data-test="extensions"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-foo",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          ComponentFoo
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-bar",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          ComponentBar
        </Link>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should work with multiple extensions 2`] = `
<Dropdown
  data-test="administration"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/settings",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_settings.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/branches",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_branch_pull_request.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/baseline",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_baseline.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/admin/extension/foo",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          Foo
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/admin/extension/bar",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          Bar
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/webhooks",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          webhooks.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/deletion",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          deletion.page
        </Link>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;
